--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <!--/////////// End Archive List //////////-->
 
         <!--/////////// Deals //////////-->
-        <div class="three">
+        <div class="clearfix">
         <section class="shadow col-1 left">
           <figure>
             <img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
