--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </section>
 
         <h2 class="milk_text">Featured Brands</h2>
-
+        <div class="row"
         <!--/////////// Featured Brands //////////-->
         <section class="shadow col-2">
           <figure>
