automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           </ul>
         </section>
         <!--/////////// End Archive List //////////-->
-
+      </div>
         <!--/////////// Deals //////////-->
         <section class="shadow col-1 left">
           <figure>
