automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </section>
         <!--/////////// End Archive List //////////-->
       </div>
-      <div class="row>"
+      <div class="row:>
         <!--/////////// Deals //////////-->
         <section class="shadow col-1 left">
           <figure>
