--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <!--/////////// Details //////////-->
     <section id="details" class="clearfix">
 
-      <div class="wrapper">
+      <div class="wrapper row">
 
         <div class="border_right col-1 left">
           <h3>Contact</h3>
